# course_work

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build_dataset.py  evaluate_500.py  predict.py  requirements.txt  setup.py  test.py  train.py
scripts/: collect_data.py  debug_tensor.py  sync_data.py
src/: dfmaker3000.py
src/dataGenius/: calculate_data.cpp  process_data.py
